# humid-temp-monitor

./: CMakeLists.txt  Doxyfile  README.md  sdkconfig.defaults
components/app_config/: CMakeLists.txt  app_config.c
components/app_config/include/: app_common.h  app_config.h
components/network/: CMakeLists.txt  app_mqtt.c  app_wifi.c
components/network/include/: app_mqtt.h  app_wifi.h
components/output/: CMakeLists.txt  app_output.c
components/output/include/: app_output.h
components/sensor/: CMakeLists.txt  sensor_dht.c
components/sensor/include/: sensor_dht.h
components/system/: CMakeLists.txt  system_task.c
components/system/include/: system_task.h
components/utils/: CMakeLists.txt  utils.c
components/utils/include/: utils.h
main/: CMakeLists.txt  main.c
tests/integration/: test_system.c
tests/unit/: test_config.c
